frontend/test/should_fail/index_exec_edge_fromIndexMultipleFromTo_index2_mismatch.grg
#using "index_exec_multiple_model.gm"

sequence s(j:int)
{
	{ i:set<AEdge>=edgesFromIndexMultipleFromTo(bari, 0, 1, food, 42.0, 42.0 + 1) }
}